# UoGFSAEDash2022

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  conanfile.py  readme.md
.github/: Format.yml
.github/workflows/: Build.yml
BusDump/: BusDump.cpp
ConanProfiles/: Linux-gcc-12-Debug.ini  Linux-gcc-12-Release.ini  MacOS-clang-Debug.ini  MacOS-clang-Release.ini  VS2019-Debug.ini  VS2019-Release.ini  VS2022-Debug.ini  VS2022-Release.ini  Visual-Studio-2019-Debug.ini  Windows-gcc-12-Debug.ini  Windows-gcc-12-Release.ini  pi4b-Debug.ini  pi4b-Release.ini
Dash/: main.qml
Dash/Interfaces/: MotorController.cpp  MotorController.hpp
RuntimeQml/: CMakeLists.txt  LICENSE  RuntimeQml.hpp
src/: CMakeLists.txt
src/BusDump/: BusDump.cpp  CMakeLists.txt  Dump.cpp  Dump.hpp
src/CANLib/: CMakeLists.txt  defs.hpp
src/CANLib/Interface/: DBCInterface.hpp  Interface.cpp  Interface.hpp
src/CANLib/Tools/: converters.cpp  converters.hpp  tools.cpp  tools.hpp
src/Dash/: CMakeLists.txt  Dash2019.cpp  Drive.qml  main.cpp  main.qml  qml.qrc
src/Dash/Interfaces/: BusSchema.hpp  schema.json
src/FakeInterfaces/: CMakeLists.txt
src/Interfaces/: BusSchema.hpp  CMakeLists.txt  MotorController.cpp  MotorController.hpp
src/Interfaces/Backend/: Dump.cpp  ECU2019.cpp  ECU2019.hpp
src/Interfaces/Frontend/: BMS.cpp  BMS.hpp  EnergyMeter.cpp  EnergyMeter.hpp  FakeInterface.cpp  FakeInterface.hpp  MotorController.cpp  MotorController.hpp
src/Interfaces/Full/: 20220510_Gen5_CAN_DB.dbc  AN400ECU.dbc  AN400ECU.hpp  BMS.cpp  BMS.hpp  CM200DZ_Motor_Controller.dbc  EnergyMeter.hpp  MotorController.cpp  MotorController.hpp  Orion_CANBUS.dbc
src/RuntimeQml/: CMakeLists.txt  RuntimeQml.cpp
src/Testing2019/: CMakeLists.txt  Dump2019.cpp  ECU2019.cpp  ECU2019.hpp
