if (${BUILD_BACKEND})
    add_subdirectory(CANLib)
    add_subdirectory(BusDump)
    add_subdirectory(Testing2019)
endif()

if (${BUILD_FRONTEND})
    # Have fake interfaces to allow FE to start building right away.
    if (${BUILD_BACKEND})
        add_subdirectory(Interfaces)
    else()
        add_subdirectory(FakeInterfaces)
    endif()
    add_subdirectory(RuntimeQml)
    add_subdirectory(Dash)
endif()
